--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,13 @@
 			<version>5.9</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+			<version>3.2.3</version>
+		</dependency>
+
+
 
 	</dependencies>
 
